# Optimize Network State and Topology Updates
Reduce repeated traversal, cache rebuilding and synchronization during power transitions and device changes. Keep expensive data lazy and update only affected sources.

- Replace linear tick-queue removal with an indexed binary heap, storing positions directly in TickTracker.
- Index storage mounts by identity and compact affected priority buckets lazily while preserving routing order and duplicate-mount semantics.
- Initialize crafting indexes on first use, then update individual providers incrementally. Unrelated devices and temporary grid boot states no longer trigger pattern re-registration.
- Maintain independent provider occurrences and build immutable provider snapshots lazily under synchronized access.
- Replace pathing DFS with reverse BFS-order propagation, reuse traversal buffers and deduplicate channel notifications after final state is committed.
- Add GridHelper.destroyConnections for synchronous batch disconnection and reduce redundant connectivity searches when removing leaves and small branches.
- Coalesce P2P peer updates by frequency and replace nested ME P2P connection matching with identity-set lookups.
- Replace per-storage energy snapshot objects with shared primitive contribution arrays. Refresh only changed sources and update ordinary node capacity changes without rereading other storages.
- Replace the power snapshot-builder API with overridable capability queries; use direct calculations for built-in linear storage and retain precision recovery and faulty-source isolation.
- Make ME Chest's local buffer private while preserving direct power input, network consumption and public write-only storage support for add-ons.
- Harden storage mount rollback, listener cleanup, callback isolation and server-thread invalidation. Keep offline storage buses asleep without polling external inventories.
- Make watcher dispatch safe against synchronous unsubscription, migration and reentry; use inventory deltas