@@ -9,6 +9,7 @@ import net.minecraft.world.World;
 import org.jetbrains.annotations.Nullable;
 
 import java.util.ArrayList;
+import java.util.Collections;
 import java.util.List;
 
 public final class RecipeSelection {
@@ -23,7 +24,43 @@ public final class RecipeSelection {
                 candidates.add(new Candidate(id, recipe, recipe.getCraftingResult(input).copy()));
             }
         }
-        return List.copyOf(candidates);
+        return Collections.unmodifiableList(candidates);
+    }
+
+    public static Selection findFirstCandidateAndConflict(InventoryCrafting input, World world,
+                                                          @Nullable ResourceLocation preferredId) {
+        Candidate selected = preferredId == null ? null : findCandidateById(input, world, preferredId);
+        int matches = 0;
+        for (IRecipe recipe : CraftingManager.REGISTRY) {
+            ResourceLocation id = recipe.getRegistryName();
+            if (id == null || !recipe.matches(input, world)) {
+                continue;
+            }
+
+            matches++;
+            if (selected == null) {
+                selected = candidate(id, recipe, input);
+            }
+            if (matches > 1) {
+                break;
+            }
+        }
+        return new Selection(selected, matches > 1);
+    }
+
+    @Nullable
+    public static Candidate findCandidateById(InventoryCrafting input, World world, ResourceLocation recipeId) {
+        IRecipe recipe = CraftingManager.REGISTRY.getObject(recipeId);
+        if (recipe == null || !recipeId.equals(recipe.getRegistryName()) || !recipe.matches(input, world)) {
+            return null;
+        }
+
+        Candidate candidate = candidate(recipeId, recipe, input);
+        return candidate.output().isEmpty() ? null : candidate;
+    }
+
+    private static Candidate candidate(ResourceLocation id, IRecipe recipe, InventoryCrafting input) {
+        return new Candidate(id, recipe, recipe.getCraftingResult(input).copy());
     }
 
     @Nullable
@@ -39,5 +76,8 @@ public final class RecipeSelection {
     }
 
     public record Candidate(ResourceLocation id, IRecipe recipe, ItemStack output) {
+    }
+
+    public record Selection(@Nullable Candidate candidate, boolean conflict) {
     }
 }
